communication with db, OK some 'create table's fail on columns named 'index', etc. some ORA-00904 and 00942 errors

--- a/database/oracle/build.xml
+++ b/database/oracle/build.xml
@@ -1,4 +1,4 @@
-<project name="LOS Reference DB" default="postgres.SQLCreateScript" basedir=".">
+<project name="LOS Reference DB Oracle" default="postgres.SQLCreateScript" basedir=".">
 
 	<property file="conection.properties" />
 
