compiled and ran the client tried fixing the names of new items in ItemData see 	modified:   config/rich.client/bobrowser/ItemDataDescriptor.xml 	modified:   rich.client/los.clientsuite/LOS Inventory Browser/src/de/linogistix/inventory/res/Bundle.properties 	modified:   rich.client/los.clientsuite/LOS Inventory Browser/src/de/linogistix/inventory/res/Bundle_en.properties

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ server.app/los.mobile/build/
 server.app/los.stocktaking-ejb/build/
 server.app/mywms.as/build/
 server.app/project-ejb/build/
+
+rich.client/los.reference/Project EJB-Library/build/
+rich.client/los.reference/Project EJB-Library/release/
+rich.client/los.reference/build/
+rich.client/los.reference/los.reference/build/
+rich.client/los.reference/nbproject/private/
