--- a/rich.client/los.clientsuite/LOS Inventory Browser/src/de/linogistix/inventory/res/Bundle.properties
+++ b/rich.client/los.clientsuite/LOS Inventory Browser/src/de/linogistix/inventory/res/Bundle.properties
@@ -1,4 +1,5 @@
 AbstractCenterPanel.jButton1.text=export .csv
+appl=Applicability Code
 BOBrowser/AdviceData=Advice Data
 BOBrowser/Documents=Documents
 BOBrowser/InventoryData=Inventory Data
