--- a/rich.client/los.clientsuite/nbproject/private/platform-private.properties
+++ b/rich.client/los.clientsuite/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Documents and Settings\\Administrator\\Desktop\\mywms\\myWMS-LOS-1.3-source\\workspace\\build.properties
+user.properties.file=C:\\Documents and Settings\\Administrator\\Desktop\\mywms\\myWMS-LOS-1.3-source\\new_workspace\\build.properties
