--- a/rich.client/los.clientsuite/LOS Common/src/de/linogistix/common/res/Bundle.properties
+++ b/rich.client/los.clientsuite/LOS Common/src/de/linogistix/common/res/Bundle.properties
@@ -154,6 +154,7 @@ IN_TRANSPORT=In transport
 Import=Import
 ItemData=Item Data
 ItemDatas=Item Data
+VehicleDatas=Vehicle Data
 ItemUnit=Item Unit
 ItemUnitType.AREA=Area
 ItemUnitType.LENGTH=Length
