--- a/rich.client/los.clientsuite/LOS Location Browser/src/de/linogistix/location/res/Bundle.properties
+++ b/rich.client/los.clientsuite/LOS Location Browser/src/de/linogistix/location/res/Bundle.properties
@@ -86,6 +86,7 @@ INTAKE=Standard intake
 IN_TRANSPORT=In Transport
 ItemData=Item Data
 ItemDatas=Item Data
+VehicleDatas=Vehicle Data
 ItemUnit=Item Unit
 ItemUnitType.AREA=Area
 ItemUnitType.LENGTH=Length
