--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ rich.client/los.reference/nbproject/private/
 rich.client/los.clientsuite/LOS\ Inventory\ Browser/nbproject/private/
 rich.client/los.clientsuite/build/
 rich.client/los.clientsuite/nbplatform/
+rich.client/los.clientsuite/**/build/
