--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ rich.client/los.clientsuite/LOS\ Inventory\ Browser/nbproject/private/
 rich.client/los.clientsuite/build/
 rich.client/los.clientsuite/nbplatform/
 rich.client/los.clientsuite/**/build/
+rich.client/los.clientsuite/**/release/
