--- a/database/hsql/conection.properties
+++ b/database/hsql/conection.properties
@@ -3,4 +3,4 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.connection.url=jdbc:hsqldb:hsql://localhost:9999/localdb
 hibernate.connection.username=SA
 hibernate.connection.password=
-#hibernate.default_schema=JBOSS
+hibernate.default_schema=JBOSS
