--- a/rich.client/los.clientsuite/LOS Common/src/de/linogistix/common/res/Bundle.properties
+++ b/rich.client/los.clientsuite/LOS Common/src/de/linogistix/common/res/Bundle.properties
@@ -652,8 +652,8 @@ linkWith=Link with
 loadHandler=Load handler
 locale=Locale
 location=Location
-lock=Lock
-lockCause=Lock cause:
+lock=Completion Success
+lockCause=Completion Remarks:
 lockEntity=Lock entity
 lock_DESCR=lock of this Business Object
 locked=locked
