first batch of greek translation

--- a/rich.client/los.clientsuite/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
+++ b/rich.client/los.clientsuite/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
@@ -1,2 +1,2 @@
-LBL_ProductInformation=LinogistiX LOS Client
+LBL_ProductInformation=MELISA \u03B4\u03BF\u03BA\u03B9\u03BC\u03AE
 LBL_Copyright=Copyright &copy; 2006-2010 LinogistiX GmbH. Please visit <a href\="http\://www.linogistix.com">http\://www.linogistix.com</a>.
