--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ rich.client/los.reference/build/
 rich.client/los.reference/los.reference/build/
 rich.client/los.reference/nbproject/private/
 
-rich.client/los.clientsuite/LOS\ Inventory\ Browser/nbproject/private/
+rich.client/los.clientsuite/**/nbproject/private/
 rich.client/los.clientsuite/build/
 rich.client/los.clientsuite/nbplatform/
 rich.client/los.clientsuite/**/build/*
