--- a/rich.client/los.clientsuite/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/rich.client/los.clientsuite/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -1,4 +1,4 @@
-currentVersion=LinogistiX LOS Client {0}
+currentVersion=MELISA \u03B4\u03BF\u03BA\u03B9\u03BC\u03AE
 LBL_splash_window_title=Starting LinogistiX LOS Client
 SPLASH_HEIGHT=303
 SPLASH_WIDTH=303
