--- a/rich.client/los.clientsuite/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
+++ b/rich.client/los.clientsuite/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
@@ -1,2 +1,2 @@
-CTL_MainWindow_Title=LinogistiX LOS Client {0}
-CTL_MainWindow_Title_No_Project=LinogistiX LOS Client {0}
+CTL_MainWindow_Title=MELISA \u03B4\u03BF\u03BA\u03B9\u03BC\u03AE
+CTL_MainWindow_Title_No_Project=MELISA \u03B4\u03BF\u03BA\u03B9\u03BC\u03AE
