--- a/server.app/los.mobile/src/de/linogistix/mobile/processes/fuel/FuelBundle.properties
+++ b/server.app/los.mobile/src/de/linogistix/mobile/processes/fuel/FuelBundle.properties
@@ -11,6 +11,21 @@ MsgEnterMat=Please enter material
 MsgMatNotFound=Material not found
 MsgMatAdviceMandatory=Advice is mandatory for this material
 TitleEnterAmount=Amount
+LabelItemData=Item Data
+LabelEnterAmount=Enter Amount
+MsgEnterAmount=Please enter an amount
+MsgAmountNotValid=The amount is not valid
+TitleEnterLoc=Target Location
+LabelAmountStock=Amount Stock
+LabelEnterLoc=Enter Location
+MsgEnterLoc=Please enter location
+MsgLocNotAccessable=Location not accessable
+TitleEnterDeliverer=Enter Deliverer
+LabelAmountStock=Amount Stock
+LabelEnterDriver=Enter Driver
+LabelEnterPlate=Enter Plate
+MsgEnterDrv=Please enter driver
+MsgEnterPlate=Please enter plate
 MEXRIEDW=MEXRIEDW
 TitleChooseOrder=GR: Choose
 TitleChoosePos=GR: Position
@@ -19,7 +34,6 @@ TitleConfirmAmount=GR: Amount
 LabelEnterMat=Enter Item Data
 TitleEnterLotDate=GR: Lot
 TitleEnterUlNo=GR: Unit Load
-TitleEnterLoc=GR: Target Location
 TitleEnterTargetUl=GR: Target UL
 TitleEnterUlType=GR: Unit Load Type
 TitleEnterLot=GR: Lot
@@ -29,12 +43,10 @@ TitleGRMat=New Material & Storage
 LabelChooseOrder=Choose Goods Receipt
 LabelChoosePos=Choose Position
 LabelEnterCode=or enter code
-LabelItemData=Item Data
 LabelOrder=Goods Receipt
 LabelPos=Position
 LabelAmount=Amount
 LabelAmountAdvice=Amount Pos
-LabelAmountStock=Amount Stock
 LabelLoc=Location
 LabelLot=Lot
 LabelUnitLoad=Unit Load
@@ -46,8 +58,6 @@ LabelConfirmLot=A new lot will be created
 LabelConfirmAmount=You entered more than the notified amount. Do you really want to continue?
 LabelEnterUlNo=Enter Unit Load Label
 LabelEnterUlType=Enter Unit Load Type
-LabelEnterLoc=Enter Location
-LabelEnterAmount=Enter Amount
 LabelEnterLot=Enter Lot
 LabelEnterSerial=Enter Serialnumber
 LabelEnterTargetUl=Enter Target Unit Load
@@ -63,13 +73,9 @@ MsgLotNotValid=Lot is not valid! At least %1$s days requited
 MsgEnterLotDate=Please enter a valid until date
 MsgEnterSerial=Please enter serial number
 MsgSerialNotValid=The serial-No is not valid
-MsgEnterAmount=Please enter an amount
-MsgAmountNotValid=The amount is not valid
 MsgAmountLimited=You cannot enter more than the notified amount
 MsgUlAlreadyUsed=The unit load is already used
 MsgEnterUlType=Please select a unit load type
-MsgEnterLoc=Please enter location
-MsgLocNotAccessable=Location not accessable
 MsgCannotReadStock=Cannot find stock to add
 MsgEnterUl=Please enter unit load
 MsgUlNotAccessable=Unit load not accessable
